<resources>
    <string name="app_name">Tienda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_app_settings">App Settings</string>

    <string name="pref_default_consumer_key">ck_a0ce054c878aff32cf78fbdecfbf463233e36ff0</string>
    <string name="pref_default_consumer_secret">cs_f27e08fd7cbf3be3cdffbe3b0ca126254a0d8747</string>
    <string name="menu_products">Products</string>
    <string name="pref_default_base_url">https://tangaweb-cresh.rhcloud.com/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_user">User</string>
    <string name="menu_login">Login</string>
    <string name="title_activity_one_product">OneProductActivity</string>
    <string name="menu_clients">Clientes</string>
    <string name="menu_categories">Categorias</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_coupons">Cupones</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_logout">Salir</string>
    <string name="menu_settings">Cuenta</string>
    <string name="filterDate">Filtrar por:</string>
    <string name="filterDateDay">Día</string>
    <string name="filterDateMonth">Mes</string>
    <string name="filterDateAnnual">Anual</string>
    <string name="filterDateWeekly">Semanal</string>
    <string name="totalSalesLabel">Ventas Totales</string>
    <string name="netSalesLabel">Ventas Netas</string>
    <string name="averageSalesLabel">Promedio Ventas</string>
    <string name="totalOrdersLabel">Órdenes Totales</string>
    <string name="totalItemsLabel">Total Artículos</string>
    <string name="totalTaxLabel">Total Impuestos</string>
    <string name="totalShippingLabel">Total de Envios</string>
    <string name="totalRefundsLabel">Total Reembolsos</string>
    <string name="totalDiscountLabel">Total Descuentos</string>
    <string name="totalAmountLabel">Total</string>
    <string name="filterDateLastMonth">Mes pasado</string>
    <string name="reportGraphicsBar">Gráfico Barras</string>
    <string name="reportGraphicsPie">Gráfico Pastel</string>
</resources>
