<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/progressContainer"
        layout="@layout/progress_haxor"
        android:visibility="gone" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/filterDate" />

        <RadioGroup
            android:id="@+id/filterType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1">

            <RadioButton
                android:id="@+id/weeklyFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterDateWeekly" />

            <RadioButton
                android:id="@+id/monthlyFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterDateMonth" />

            <RadioButton
                android:id="@+id/annualFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterDateAnnual" />
        </RadioGroup>
    </GridLayout>

    <FrameLayout
        android:id="@+id/report_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
</LinearLayout>